chore:add publish state to blogs
